--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -6,6 +6,13 @@
 }
 
 @font-face {
+    font-family: "main-head-font";
+    src: url("../fonts/fonnts.com-recoleta-regular.otf");
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
     font-family: "para-font";
     src: url("../fonts/WorkSans-Regular.ttf");
     font-weight: normal;
@@ -21,6 +28,7 @@
     --text-color: #555;
 
     --font-head: "head-font", sans-serif;
+    --main-head-font: "main-head-font";
     --font-para: "para-font", sans-serif;
 
     --white: #ffffff;
@@ -64,9 +72,13 @@ body {
     overflow-x: hidden;
 }
 
+h2 {
+    font-family: var(--main-head-font) !important;
+    font-weight: 900;
+}
 
 h1,
-h2,
+
 h3,
 h4,
 h5,
@@ -81,9 +93,6 @@ p {
     margin-bottom: 1rem;
 }
 
-h4 {
-    color: red;
-}
 
 h2 {
     color: aqua;
@@ -171,11 +180,51 @@ a:hover {
     background: rgba(0, 0, 0, 0.35);
 }
 
+.sub-head {
+    color: var(--secondary-color);
+    font-size: 14px;
+    padding-left: 60px;
+    font-weight: 600;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    position: relative;
+    display: inline-block;
+    margin-bottom: 12px;
+}
+
+.sub-head::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: -0px;
+    width: 50px;
+    height: 2px;
+    background: linear-gradient(90deg,
+            transparent,
+            var(--secondary-color));
+    transform: translateY(-50%);
+}
+
+.main-head {
+    color: #ffffff;
+    font-size: 44px;
+    font-weight: 900;
+    line-height: 1.3;
+    margin: 0;
+}
+
+
+
+
+
+
 
 
 /* ==============================header================================ */
 .portfolio-navbar {
-    background: linear-gradient(90deg, #0f0c29, #221d53, #24243e);
+    background: radial-gradient(circle at top, #111827, #020617);
+
+    /* background: linear-gradient(90deg, #0f0c29, #221d53, #24243e); */
     padding: 14px 0;
     border-bottom-left-radius: 40px;
     border-bottom-right-radius: 40px;
@@ -457,4 +506,286 @@ a:hover {
 .floating-menu a.active svg,
 .floating-menu a:hover svg {
     filter: drop-shadow(0 0 10px rgba(255, 80, 120, 0.6));
+}
+
+
+
+/* ==============================================footer =================================*/
+.mui-footer {
+    background: radial-gradient(circle at top, #111827, #020617);
+    color: #cbd5e1;
+    padding: 70px 0 30px;
+    font-size: 14px;
+    border-top: 2px solid var(--secondary-color);
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+}
+
+.footer-brand h5 {
+    color: #fff;
+    margin-top: 15px;
+}
+
+.brand-logo {
+    background: linear-gradient(135deg, #2563eb, #22d3ee);
+    color: #fff;
+    width: 42px;
+    height: 42px;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+}
+
+.footer-text {
+    max-width: 320px;
+    margin: 12px 0;
+}
+
+.footer-title {
+    color: #fff;
+    margin-bottom: 12px;
+}
+
+.footer-links {
+    list-style: none;
+    padding: 0;
+}
+
+.footer-links li {
+    margin-bottom: 8px;
+    cursor: pointer;
+}
+
+.footer-links li:hover {
+    color: #38bdf8;
+}
+
+.hiring {
+    background: #16a34a;
+    color: #fff;
+    font-size: 10px;
+    padding: 2px 6px;
+    border-radius: 6px;
+    margin-left: 6px;
+}
+
+.footer-bottom {
+    border-top: 1px solid #1e293b;
+    margin-top: 40px;
+    padding-top: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.social-icons svg {
+    font-size: 18px;
+    margin-left: 14px;
+    cursor: pointer;
+}
+
+.social-icons svg:hover {
+    color: #38bdf8;
+}
+
+/* =====================services section================= */
+.services-inner {
+    padding: 50px 0px;
+}
+
+.services-inner .container-fluid .header-wrap-1 {
+    width: 90%;
+    margin: 0px auto;
+}
+
+.services-inner .container-fluid {
+    width: 100%;
+}
+
+.service-sec {
+    overflow: hidden;
+    width: 100%;
+    padding: 20px 0;
+    background: transparent;
+}
+
+.service-track {
+    display: flex;
+    gap: 30px;
+    width: max-content;
+    animation: marquee-left 45s linear infinite;
+}
+
+.service-card {
+    flex: 0 0 auto;
+    width: 350px;
+    border-radius: 16px;
+    overflow: hidden;
+    transition: transform 0.3s ease;
+    position: relative;
+}
+
+.service-content {
+    width: 90% !important;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 12px;
+}
+
+.service-arrow {
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    background: var(--secondary-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    transition: all 0.3s ease;
+}
+
+.service-arrow svg {
+    font-size: 18px;
+}
+
+.service-card:hover .service-arrow {
+    transform: translateX(6px);
+    box-shadow: 0 8px 20px rgba(255, 56, 56, 0.45);
+}
+
+.service-content h4 {
+    font-size: 20px;
+    font-weight: 900;
+    color: var(--white);
+    margin-bottom: 0px !important;
+}
+
+.service-card {
+    position: relative;
+    overflow: hidden;
+}
+
+.service-overlay {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 60%;
+    background: linear-gradient(to top,
+            rgba(2, 6, 23, 0.95),
+            rgba(2, 6, 23, 0.4),
+            transparent);
+    pointer-events: none;
+}
+
+.service-content {
+    position: absolute;
+    left: 20px;
+    bottom: 20px;
+    z-index: 2;
+    color: #fff;
+}
+
+
+.service-card:hover {
+    transform: scale(1.05);
+}
+
+@keyframes marquee-left {
+    from {
+        transform: translateX(0);
+    }
+
+    to {
+        transform: translateX(-50%);
+    }
+}
+
+.service-sec:hover .service-track {
+    animation-play-state: paused;
+}
+
+.service-sec {
+    margin: 20px 0px;
+}
+
+/* ===============test marqiue section======================= */
+.text-marquee {
+    width: 100%;
+    overflow: hidden;
+    padding: 0;
+    position: relative;
+}
+
+.marquee-track {
+    display: flex;
+    width: max-content;
+    will-change: transform;
+    transform: rotate(-5.5deg);
+}
+
+.marquee-left {
+    animation: marquee-rtl 42s linear infinite;
+}
+
+@keyframes marquee-rtl {
+    from {
+        transform: translate3d(0, 0, 0);
+    }
+
+    to {
+        transform: translate3d(-50%, 0, 0);
+    }
+}
+
+.bi-text-scroll-item-1 {
+    display: flex;
+    align-items: center;
+}
+
+.bi-text-scroll-item-1 h3 {
+    position: relative;
+    font-size: 110px;
+    font-weight: 400;
+    margin: 0 60px 0 32px;
+    white-space: nowrap;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+
+    -webkit-text-stroke: 2px var(--secondary-color);
+    -webkit-text-fill-color: transparent;
+
+    opacity: 0.9;
+}
+
+.bi-text-scroll-item-1 h3::after {
+    content: "";
+    position: absolute;
+    right: -48px;
+    top: 50%;
+    transform: translateY(-50%) rotate(45deg);
+    width: 14px;
+    height: 14px;
+    background: var(--secondary-color);
+    opacity: 0.85;
+}
+
+.text-marquee:hover .marquee-left {
+    animation-play-state: paused;
+}
+
+@media (max-width: 768px) {
+    .bi-text-scroll-item-1 h3 {
+        font-size: 64px;
+        letter-spacing: 1.5px;
+        margin: 0 40px 0 16px;
+    }
+
+    .bi-text-scroll-item-1 h3::after {
+        width: 12px;
+        right: -24px;
+    }
 }
